--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,12 @@
 
 language: R
 
+services:
+  - docker
+
+before_install:
+- docker pull vimc/montagu-db
+
 sudo: false
 cache: packages
 r_packages: covr
