--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
   - docker
 
 before_install:
-- docker pull vimc/montagu-db
+- docker pull vimc/montagu-db:master
 
 sudo: false
 cache: packages
