--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,7 @@
 # DO NOT CHANGE the "init" and "install" sections below
 image: Visual Studio 2019
 # Download script file from GitHub
+
 init:
   ps: |
         $ErrorActionPreference = "Stop"
@@ -15,6 +16,7 @@ cache:
 # Adapt as necessary starting from here
 
 build_script:
+  - docker pull vimc/montagu-db:master
   - travis-tool.sh install_deps
 
 test_script:
