--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,12 +7,9 @@ init:
         $ErrorActionPreference = "Stop"
         Invoke-WebRequest http://raw.github.com/krlmlr/r-appveyor/master/scripts/appveyor-tool.ps1 -OutFile "..\appveyor-tool.ps1"
         Import-Module '..\appveyor-tool.ps1'
-        Switch-DockerLinux
+        docker-switch-linux
 install:
   ps: Bootstrap
-
-ps
-  - docker-switch-linux
 
 cache:
   - C:\RLibrary
