--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,22 @@ init:
         $ErrorActionPreference = "Stop"
         Invoke-WebRequest http://raw.github.com/krlmlr/r-appveyor/master/scripts/appveyor-tool.ps1 -OutFile "..\appveyor-tool.ps1"
         Import-Module '..\appveyor-tool.ps1'
-        docker-switch-linux
+
+- ps: _
+# Now let's switch Docker to Linux containers mode!
+# 
+# For switching between Windows and Linux modes AppVeyor provides two sets of commands.
+# 
+# PowerShell:
+#   Switch-DockerWindows       - switch Docker to Windows mode
+#   Switch-DockerLinux         - switch Docker to Linux mode
+# CMD:
+#   docker-switch-windows      - switch Docker to Windows mode
+#   docker-switch-linux        - switch Docker to Linux mode
+# 
+# Switching Docker to Linux for the first time takes around a minute. This is the time required to start "MobyLinuxVM" VM:
+- docker-switch-linux
+
 install:
   ps: Bootstrap
 
