--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,9 @@ Package: stoner
 Title: Support for building VIMC Montagu Touchstones, using dettl
 Version: 0.0.4
 Authors@R:
-    c(person("Wes", "Hinsley",role = c("aut", "cre", "dnc", "itr"),
+    c(person("Wes", "Hinsley",role = c("aut", "cre", "dnc", "itr", "sng"),
            email = "w.hinsley@imperial.ac.uk"),
-      person("Rich", "Fitzjohn", role = "aut"))       
+      person("Rich", "Fitzjohn", role = "aut", "sng"))       
 URL: https://github.com/vimc/stoner
 BugReports: https://github.com/vimc/stoner/issues           
 Description: For montagu-imports that create touchstones, or augment existing
