First working stochastic process

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,3 +7,4 @@ export(stone_stochastic_process)
 export(stone_test_extract)
 export(stone_test_transform)
 export(stone_transform)
+import(data.table)
