--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,9 @@ LazyData: true
 Imports:
     DBI,
     RPostgres,
-    utils
+    utils,
+    data.table
+    
 Language: en-GB
 RoxygenNote: 7.1.1
 Roxygen: list(markdown = TRUE)
