--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,4 +10,4 @@ export(stone_test_transform)
 export(stone_transform)
 import(data.table)
 import(readr)
-importFrom("(\"utils\",","\"write.csv\")")
+importFrom(utils,write.csv)
