--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,5 +9,7 @@ export(stone_test_extract)
 export(stone_test_transform)
 export(stone_transform)
 import(data.table)
+import(read.csv)
 import(readr)
+import(utils)
 importFrom(utils,write.csv)
