--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,6 @@ export(stone_test_extract)
 export(stone_test_transform)
 export(stone_transform)
 import(data.table)
-import(read.csv)
 import(readr)
-import(utils)
+importFrom(utils,read.csv)
 importFrom(utils,write.csv)
