Add certificate validation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,12 +3,14 @@
 export(stone_dump)
 export(stone_extract)
 export(stone_load)
+export(stone_stochastic_cert_verify)
 export(stone_stochastic_process)
 export(stone_stochastic_upload)
 export(stone_test_extract)
 export(stone_test_transform)
 export(stone_transform)
 import(data.table)
+import(jsonlite)
 import(readr)
 importFrom(utils,read.csv)
 importFrom(utils,write.csv)
