--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,9 @@ Package: stoner
 Title: Support for building VIMC Montagu Touchstones, using dettl
 Version: 0.0.8
 Authors@R:
-    c(person("Wes", "Hinsley",role = c("aut", "cre", "cst", "dnc", "itr", "sng"),
+    c(person("Wes", "Hinsley",role = c("aut", "cre", "cst", "dnc", "elg", "itr", "sng"),
            email = "w.hinsley@imperial.ac.uk"),
-      person("Rich", "Fitzjohn", role = c("aut", "sng")))
+      person("Rich", "Fitzjohn", role = c("aut", "csl", "sng")))
 URL: https://github.com/vimc/stoner
 BugReports: https://github.com/vimc/stoner/issues
 Description: For montagu-imports that create touchstones, or augment existing
