--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(stone_stochastic_upload)
 export(stone_test_extract)
 export(stone_test_transform)
 export(stone_transform)
+export(stoner_calculate_dalys)
 import(data.table)
 import(readr)
 importFrom(utils,read.csv)
