--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: stoner
-Title: Support for building VIMC Montagu Touchstones, using dettl
+Title: Support for Building VIMC Montagu Touchstones, using Dettl
 Version: 0.0.9
 Authors@R:
     c(person("Wes", "Hinsley",role = c("aut", "cre", "cst", "dnc", "elg", "itr", "sng"),
