--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(stone_test_extract)
 export(stone_test_transform)
 export(stone_transform)
 export(stoner_calculate_dalys)
+export(stoner_dalys_for_db)
 import(data.table)
 import(readr)
 importFrom(utils,read.csv)
