--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -63,6 +63,12 @@ jobs:
             eval sudo $cmd
           done < <(Rscript -e 'writeLines(remotes::system_requirements("ubuntu", "20.04"))')
 
+      - name: Docker on macOS
+        if: runner.os == 'macOS'
+        run: |
+          brew install docker-machine docker
+          sudo docker -version
+
       - name: Install dependencies
         run: |
           remotes::install_deps(dependencies = TRUE)
