--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -16,6 +16,11 @@ jobs:
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
+      - name: Docker
+        run: |
+          brew install docker-machine docker
+          sudo docker -version
+
       - uses: actions/checkout@v2
 
       - uses: r-lib/actions/setup-r@v1
