--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -67,7 +67,7 @@ jobs:
         if: runner.os == 'macOS'
         run: |
           brew install docker-machine docker
-          sudo docker -version
+          sudo docker --version
 
       - name: Install dependencies
         run: |
