--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -68,6 +68,7 @@ jobs:
         run: |
           brew install docker-machine docker
           sudo docker --version
+          sudo docker-machine create --driver virtualbox default
 
       - name: Install dependencies
         run: |
