--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -21,6 +21,9 @@ jobs:
           brew install docker-machine docker
           sudo docker --version
           sudo docker-machine create --driver virtualbox default
+          sudo docker-machine ls
+          sudo docker-machine env default
+          sudo eval $(docker-machine env default)
 
       - uses: actions/checkout@v2
 
