--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -12,18 +12,10 @@ name: test-coverage
 
 jobs:
   test-coverage:
-    runs-on: macOS-latest
+    runs-on: ubuntu-latest
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
-      - name: Docker
-        run: |
-          brew install docker-machine docker
-          sudo docker --version
-          sudo docker-machine create --driver virtualbox default
-          sudo docker-machine ls
-          sudo docker-machine env default
-          sudo eval $(docker-machine env default)
 
       - uses: actions/checkout@v2
 
