--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -49,6 +49,7 @@ jobs:
 
       - name: Test coverage
         run: |
+          install.packages("roxygen2")  
           install.packages("devtools")
           devtools::build(path='.'); 
           covr::codecov()
