--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -12,14 +12,11 @@ name: test-coverage
 
 jobs:
   test-coverage:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+      ORDERLYWEB_TEST_TOKEN: ${{ secrets.ORDERLYWEB_TEST_TOKEN }}
     steps:
-      - name: Install OS dependencies
-        run: |
-          sudo apt-get install libcurl4-openssl-dev
-
       - uses: actions/checkout@v2
 
       - uses: r-lib/actions/setup-r@v1
@@ -40,6 +37,14 @@ jobs:
           key: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-1-${{ hashFiles('.github/depends.Rds') }}
           restore-keys: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-1-
 
+      - name: Install system dependencies
+        if: runner.os == 'Linux'
+        run: |
+          while read -r cmd
+          do
+            eval sudo $cmd
+          done < <(Rscript -e 'writeLines(remotes::system_requirements("ubuntu", "20.04"))')
+
       - name: Install dependencies
         run: |
           install.packages(c("remotes"))
@@ -48,6 +53,5 @@ jobs:
         shell: Rscript {0}
 
       - name: Test coverage
-        run: |
-          covr::codecov()
+        run: covr::codecov()
         shell: Rscript {0}
