Fix R CMD check notes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,5 +13,6 @@ export(stoner_calculate_dalys)
 export(stoner_dalys_for_db)
 import(data.table)
 import(readr)
+importFrom(magrittr,"%>%")
 importFrom(utils,read.csv)
 importFrom(utils,write.csv)
