Use prettyunits of gdata to avoid gtools orphan package warning

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,12 +18,12 @@ LazyData: true
 Imports:
     DBI,
     data.table,
-    gdata,
     jsonlite,
     lgr,
     qs,
     dplyr,
     magrittr,
+    prettyunits,
     readr,
     utils,
     withr
