--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,5 +15,6 @@ export(stoner_dalys_for_db)
 import(data.table)
 import(readr)
 importFrom(magrittr,"%>%")
+importFrom(utils,capture.output)
 importFrom(utils,read.csv)
 importFrom(utils,write.csv)
