--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(stoner_calculate_dalys)
 export(stoner_dalys_for_db)
 import(arrow)
 import(dplyr)
+import(qs2)
 import(readr)
 importFrom(data.table,as.data.table)
 importFrom(data.table,rbindlist)
