Fix more imports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,7 +19,12 @@ import(qs2)
 import(readr)
 importFrom(data.table,as.data.table)
 importFrom(data.table,rbindlist)
+importFrom(graphics,lines)
 importFrom(magrittr,"%>%")
+importFrom(stats,median)
+importFrom(stats,quantile)
+importFrom(testthat,expect_equal)
+importFrom(testthat,expect_true)
 importFrom(utils,capture.output)
 importFrom(utils,read.csv)
 importFrom(utils,write.csv)
