More import/doc fix

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ importFrom(data.table,as.data.table)
 importFrom(data.table,rbindlist)
 importFrom(graphics,lines)
 importFrom(magrittr,"%>%")
+importFrom(rlang,":=")
 importFrom(stats,median)
 importFrom(stats,quantile)
 importFrom(testthat,expect_equal)
