Remove qs, use arrow/pq

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,8 +15,8 @@ export(stoner_calculate_dalys)
 export(stoner_dalys_for_db)
 import(arrow)
 import(dplyr)
-import(qs2)
 import(readr)
+importFrom(arrow,write_parquet)
 importFrom(data.table,as.data.table)
 importFrom(data.table,rbindlist)
 importFrom(graphics,lines)
